--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -1,3 +1,4 @@
+@import "bootstrap/scss/functions";
 @import "variables";
 // ==========================================================================
 // External Libs
