--- a/resources/scss/ceres/mixins/_general-mixins.scss
+++ b/resources/scss/ceres/mixins/_general-mixins.scss
@@ -277,3 +277,9 @@
     border-left: $h solid $color;
     border-bottom: $w solid transparent;
 }
+
+@mixin context-bg($color)
+{
+    background-color: $color;
+    color: color-yiq($color);
+}
