--- a/resources/scss/ceres/plugins/_bs4-progress.scss
+++ b/resources/scss/ceres/plugins/_bs4-progress.scss
@@ -13,9 +13,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: $white;
     text-align: center;
     white-space: nowrap;
-    background-color: $primary;
     transition: width .6s ease;
+    @include context-bg($primary);
 }
