--- a/resources/scss/ceres/views/Category/_category-list-controls.scss
+++ b/resources/scss/ceres/views/Category/_category-list-controls.scss
@@ -28,8 +28,7 @@
             }
 
             &.reset-all {
-                color: $white;
-                background-color: $primary;
+                @include context-bg($primary);
 
                 &:hover {
                     background-color: darken($primary, 15%);
