--- a/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
+++ b/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
@@ -50,7 +50,7 @@
             border-color: transparent $primary transparent transparent;
 
             & > i{
-                color: #fff;
+                color: color-yiq($primary);
             }
         }
     }
