--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -81,14 +81,14 @@
             {{ Twig.if("itemList.documents is not empty") }}
                 <carousel :items-per-page="{{ itemsPerPage }}">
                     {{ Twig.for("item", "itemList.documents") }}
-                        <div slot="items">
+                        <template slot="items">
                             <category-item
                                 :item-data="{{ Twig.print("item.data | json_encode") }}"
                                 :decimal-count="{{ Twig.print("ceresConfig.item.storeSpecial") }}">
                                 <template slot="BeforePrices">{{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.BeforePrices", "item.data"])) }}</template>
                                 <template slot="AfterPrices">{{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.AfterPrices", "item.data"])) }}</template>
                             </category-item>
-                        </div>
+                        </template>
                     {{ Twig.endfor() }}
                 </carousel>
             {{ Twig.endif() }}
