CHANGE LastSeenItemList - remove prop "maxItems"

--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -8,7 +8,7 @@
         display: flex;
     }
 
-    .widget-inner
+    > .widget-inner
     {
         padding-left: 15px;
         padding-right: 15px;
