FIX buttons im my-account

--- a/resources/scss/ceres/common/_buttons.scss
+++ b/resources/scss/ceres/common/_buttons.scss
@@ -107,6 +107,11 @@ button:focus {
 		}
 	}
 
+	& > span + .fa {
+		margin-left: 5px;
+		margin-top: 1px;
+	}
+
 	&.btn-remove-address {
 		background-color: $danger;
 		margin-right: -5px;
