--- a/resources/views/MyAccount/MyAccount.twig
+++ b/resources/views/MyAccount/MyAccount.twig
@@ -32,8 +32,8 @@
             </div>
             <div class="col-sm-3">
                 <a href="#" class="btn btn-danger float-right btn-medium" v-logout>
+                    <span>{{ trans("Ceres::Template.myAccountLogout") }}</span>
                     <i class="fa fa-sign-out"></i>
-                    {{ trans("Ceres::Template.myAccountLogout") }}
                 </a>
             </div>
             <div class="col-12">
