--- a/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
+++ b/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
@@ -42,8 +42,8 @@
 
                 <div class="add-item">
                     <button href="#" class="btn btn-primary btn-medium btn-only-icon-xs-down" v-if="isAddAddressEnabled" @click.prevent="showAddModal()" :disabled="isBasketLoading">
-                        <i class="fa fa-plus-square" aria-hidden="true"></i>
                         <span>{{ trans("Ceres::Template.addressAddAddress") }}</span>
+                        <i class="fa fa-plus-square" aria-hidden="true"></i>
                     </button>
                 </div>
 
@@ -164,12 +164,12 @@
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-medium btn-m-r btn-outline-primary" @click="closeDeleteModal">
+                                <span>{{ trans("Ceres::Template.addressCancel") }}</span>
                                 <i class="fa fa-times" aria-hidden="true"></i>
-                                {{ trans("Ceres::Template.addressCancel") }}
                             </button>
                             <button type="button" class="btn btn-primary btn-medium" :disabled="deleteModalWaiting" @click="deleteAddress">
+                                <span>{{ trans("Ceres::Template.addressDelete") }}</span>
                                 <i v-waiting-animation="deleteModalWaiting" class="fa fa-trash" aria-hidden="true"></i>
-                                {{ trans("Ceres::Template.addressDelete") }}
                             </button>
                         </div>
                     </div>
